--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </nav>
 
     <section>
-      <h2>Brief introduction</h2>
+      <h2><em>A very brief introduction</em></h2>
 
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
